--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@emurgo/cardano-serialization-lib-browser": "^9.1.4",
     "@emurgo/cip14-js": "^3.0.1",
     "@headlessui/react": "^1.4.1",
+    "@mailchimp/mailchimp_marketing": "^3.0.80",
     "axios": "^0.26.1",
     "babel-loader": "^8.1.0",
     "buffer": "^6.0.3",
@@ -38,6 +39,7 @@
     "react-datetime-picker": "^3.4.3",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.11.0",
+    "react-mailchimp-subscribe": "^2.1.3",
     "react-router-dom": "^6.4.0",
     "react-select": "^5.3.0",
     "react-timer-hook": "^3.0.5",
